update db password in application.xml according to mysql5.7 auth rules, correct bindable=ture in settings.xml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost/test
     username: root
-    password: root
+    password: =P0o9i8u7 
     driverClassName: com.mysql.jdbc.Driver
   main:
     show_banner: false
