--- a/demo/standaloneMySQLSB.yaml
+++ b/demo/standaloneMySQLSB.yaml
@@ -3,4 +3,4 @@ kind: ClusterServiceBroker
 metadata:
   name: standalone-mysql-broker
 spec:
-  url: http://192.168.199.78:9000
+  url: http://mysql-java-broker-mysql-java-broker.mysql-java-broker.svc.cluster.local
