--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: cf-mysql-java-broker
   datasource:
-    url: jdbc:mysql://localhost/test
+    url: jdbc:mysql://192.168.199.78/test
     username: root
     password: =P0o9i8u7 
     driverClassName: com.mysql.jdbc.Driver
