--- a/charts/mysql-java-broker/values.yaml
+++ b/charts/mysql-java-broker/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 replicaCount: 1
 image:
-  repository: mysql-java-broker
+  repository: registry.cn-beijing.aliyuncs.com/servicebroker/mysql-java-broker
   tag: latest
   pullPolicy: Always
 service:
