--- a/demo/standaloneMySQLSI.yaml
+++ b/demo/standaloneMySQLSI.yaml
@@ -1,7 +1,7 @@
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ServiceInstance
 metadata:
-  name: standalone-mysql-instance
+  name: k8s-mysql-instance
   namespace: test-ns
 spec:
   clusterServiceClassExternalName: p-mysql
