--- a/demo/standaloneMySQLSI.yaml
+++ b/demo/standaloneMySQLSI.yaml
@@ -4,7 +4,7 @@ metadata:
   name: k8s-mysql-instance
   namespace: test-ns
 spec:
-  clusterServiceClassExternalName: p-mysql
+  clusterServiceClassExternalName: my-mysql
   clusterServicePlanExternalName: 5mb
   parameters:
     credentials:
