update secret name in client pod

--- a/demo/usemysql.yaml
+++ b/demo/usemysql.yaml
@@ -21,7 +21,7 @@
     "volumes": [{
       "name": "foo",
       "secret": {
-        "secretName": "mysql-secret8"
+        "secretName": "mysql-secret"
       }
     }]
   }
