--- a/demo/usemysql.yaml
+++ b/demo/usemysql.yaml
@@ -2,13 +2,13 @@
  "apiVersion": "v1",
  "kind": "Pod",
   "metadata": {
-    "name": "usemysqlpod",
+    "name": "usemysqlpod1",
     "namespace": "test-ns"
   },
   "spec": {
     "hostNetwork": true,
     "containers": [{
-      "name": "usemysqlpod",
+      "name": "usemysqlpod1",
       "image": "mysql:5.7",
       "volumeMounts": [{
         "name": "foo",
@@ -21,7 +21,7 @@
     "volumes": [{
       "name": "foo",
       "secret": {
-        "secretName": "mysql-secret"
+        "secretName": "mysql-secret8"
       }
     }]
   }
